[package]
name = "pg_enquo"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
pg11 = ["pgx/pg11", "pgx-tests/pg11" ]
pg12 = ["pgx/pg12", "pgx-tests/pg12" ]
pg13 = ["pgx/pg13", "pgx-tests/pg13" ]
pg14 = ["pgx/pg14", "pgx-tests/pg14" ]
pg15 = ["pgx/pg15", "pgx-tests/pg15" ]
pg_test = []

[dependencies]
enquo-core = "0.7"
pgx = "=0.7.4"
serde = "1.0"
serde_json = "1.0"
backtrace = "0.3"

[dev-dependencies]
pgx-tests = "=0.7.4"

#[profile.dev]
#panic = "unwind"
#lto = "thin"

#[profile.release]
#panic = "unwind"
#opt-level = 3
#lto = "fat"
#codegen-units = 1
