[package]
name = "pg_enquo"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
enquo-core = "0.9.1"
pgrx = "=0.12.8"
serde = "1.0"
serde_json = "1.0"
backtrace = "0.3"

[dev-dependencies]
pgrx-tests = "=0.12.8"

#[profile.dev]
#panic = "unwind"
#lto = "thin"

#[profile.release]
#panic = "unwind"
#opt-level = 3
#lto = "fat"
#codegen-units = 1

[[bin]]
name = "pgrx_embed_pg_enquo"
path = "./src/bin/pgrx_embed.rs"